fixed big gap css repair history

--- a/src/app/customerComponents/repair-history/repair-history.component.css
+++ b/src/app/customerComponents/repair-history/repair-history.component.css
@@ -20,6 +20,7 @@ body {
     padding: .3rem;
     width: 100%;
     margin: 0;
+    margin-top: -20%;
     border-collapse: collapse;
   }
   .page table th {
@@ -43,11 +44,11 @@ body {
   }
 
 .main{
-    margin: 100px 0px 0px -100px;
-    width: 100%/*1347*/;
+    margin: 55px 0px 0px 0px;
+    width: 1550px;
     justify-content: center;
     height: 43rem;
-    background-color: rgb(255, 232, 232); /* For browsers that do not support gradients */
+    background-color: rgb(255, 232, 232); 
     background-image: linear-gradient(170deg, rgb(255, 232, 232) 0%, rgb(255, 232, 232) 60%, white 60.1%);
 }
 
